add author "Quoc Dat Nguyen" contribution

--- a/fa25-team-b/ PDF Extraction/FY2021_Asset_Report_Extraction.ipynb
+++ b/fa25-team-b/ PDF Extraction/FY2021_Asset_Report_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "21313c78",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,8 @@
     "* Floor asset details (white 'Place' floor)\n",
     "* Site operational status\n",
     "* Years in storage pivot (summary of asset details by age and years in storage)\n",
+    "\n",
+    "by Quoc Dat Nguyen\n",
     "\n",
     "\"\"\"\n",
     "\n",
