--- a/fa25-team-b/Base Question/Base_Question_3.ipynb
+++ b/fa25-team-b/Base Question/Base_Question_3.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "This notebook explores how the mix and volume of gaming machines installed at bases changes from fiscal year 2021 through 2024, using the **Asset Report Final** tables.\n",
     "\n",
-    "If your folder or file names differ, edit the `base_dir` or filename patterns in the next cell."
+    "If your folder or file names differ, edit the `base_dir` or filename patterns in the next cell.\n",
+    "\n",
+    "by Quoc Dat Nguyen"
    ]
   },
   {
