Update file paths for PDF and Excel outputs

--- a/fa25-team-b/ PDF Extraction/FY2021_Asset_Report_Extraction.ipynb
+++ b/fa25-team-b/ PDF Extraction/FY2021_Asset_Report_Extraction.ipynb
@@ -1052,10 +1052,10 @@
     "\n",
     "# --- update your __main__ to point to the Excel destination you want ---\n",
     "if __name__ == '__main__':\n",
-    "    pdf_path = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\data\\FY2021 Asset Report.pdf\"\n",
+    "    pdf_path = r\"fa25-team-b/pdf/FY2021 Asset Report.pdf\"\n",
     "    # keep CSVs (if you want) but also write a single Excel file here:\n",
-    "    excel_out = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\database\\FY2021_CSVs\\FY2021_Asset_Report.xlsx\"\n",
-    "    output_dir = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\database\\FY2021_CSVs\\csv_output\"\n",
+    "    excel_out = r\"fa25-team-b/CSVs/FY2021_Asset_Report.xlsx\"\n",
+    "    output_dir = r\"fa25-team-b/CSVs\"\n",
     "\n",
     "    if os.path.exists(pdf_path):\n",
     "        run_all(pdf_path, outdir=output_dir, excel_path=excel_out, also_write_csvs=True)\n",
