--- a/fa25-team-b/eda/EGM_Analysis_by_Region_Manufacturer_EDA.ipynb
+++ b/fa25-team-b/eda/EGM_Analysis_by_Region_Manufacturer_EDA.ipynb
@@ -158,7 +158,7 @@
     "%matplotlib inline\n",
     "\n",
     "# Paths to the Excel file\n",
-    "file_path = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\database\\FY2021_CSVs\\FY2021_Asset_Report.xlsx\"\n",
+    "file_path = r\"fa25-team-b/CSVs/FY2021_Asset_Report.xlsx\"\n",
     "\n",
     "# Read sheets\n",
     "installed_assets = pd.read_excel(file_path, sheet_name='Installed_Assets')\n",
