Update file paths for revenue and asset reports

--- a/fa25-team-b/eda/Revenue_Comparison_EDA.ipynb
+++ b/fa25-team-b/eda/Revenue_Comparison_EDA.ipynb
@@ -35,12 +35,12 @@
     "%matplotlib inline\n",
     "\n",
     "# Load revenue spreadsheet\n",
-    "revenue_file = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\database\\FY2021_CSVs\\Revenue Comparison_C.xlsx\"\n",
+    "revenue_file = r\"fa25-team-b/CSVs/Revenue Comparison_C.xlsx\"\n",
     "revenue_df = pd.read_excel(revenue_file, sheet_name='Revenue_Summaries', header=None)\n",
     "\n",
     "# Load asset report for base counts\n",
-    "asset_file = r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\database\\FY2021_CSVs\\FY2021_Asset_Report.xlsx\"\n",
-    "installed_assets = pd.read_excel(asset_file, sheet_name='Installed_Assets')\n",
+    "asset_file = r\"fa25-team-b/CSVs/FY2021_Asset_Report.xlsx\"\n",
+    "installed_assets = pd.read_excel(asset_file, sheet_name='Installed Assets')\n",
     "field_office = pd.read_excel(asset_file, sheet_name='Field_Office')\n",
     "floor_details = pd.read_excel(asset_file, sheet_name='Floor_Details')"
    ]
