Update BASE_DIR path for asset reports

--- a/fa25-team-b/Base Question/Base_Question_3.ipynb
+++ b/fa25-team-b/Base Question/Base_Question_3.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "# --- Configuration ---\n",
     "# Use raw string or forward slashes for paths to avoid Windows escape character errors\n",
-    "BASE_DIR = Path(r\"C:\\Users\\dawid\\Desktop\\MUCKROCK\\data\\Asset Reports\")\n",
+    "BASE_DIR = Path(r\"fa25-team-b/CSVs/Asset Reports\")\n",
     "YEARS = [2020, 2021, 2022, 2023, 2024]\n",
     "\n",
     "dfs = []\n",
