Update cells of  Base Question 2 file

--- a/fa25-team-b/Base Question/Base_Question_2.ipynb
+++ b/fa25-team-b/Base Question/Base_Question_2.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,50 @@
       "Notebook directory: c:\\Users\\User\\Desktop\\BU\\25 fall class\\DS 701 Tools for Data Science\\DS_701_Project\\ds-muckrock-liberation\\fa25-team-b\\Base Question\n",
       "Project root detected: C:\\Users\\User\\Desktop\\BU\\25 fall class\\DS 701 Tools for Data Science\\DS_701_Project\\ds-muckrock-liberation\\fa25-team-b\n",
       "CSV path: C:\\Users\\User\\Desktop\\BU\\25 fall class\\DS 701 Tools for Data Science\\DS_701_Project\\ds-muckrock-liberation\\fa25-team-b\\CSVs\\District Revenue\\District_Revenue_filtered_FY20-FY24_final.csv\n",
-      "✅ CSV exists: True\n",
+      "✅ CSV exists: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------- Project root and file paths -------------------\n",
+    "# Get the notebook's directory\n",
+    "notebook_file = Path(__file__) if '__file__' in dir() else Path.cwd() / \"Base_Question_2.ipynb\"\n",
+    "notebook_dir = Path.cwd() if 'Base Question' in str(Path.cwd()) else Path(__file__).parent\n",
+    "\n",
+    "# Walk up to find fa25-team-b (contains CSVs folder)\n",
+    "current = Path.cwd().resolve()\n",
+    "project_root = None\n",
+    "for p in [current] + list(current.parents):\n",
+    "    if (p / \"CSVs\" / \"District Revenue\").exists():\n",
+    "        project_root = p\n",
+    "        break\n",
+    "\n",
+    "if project_root is None:\n",
+    "    # Fallback: assume we're in Base Question and go up one level\n",
+    "    project_root = Path.cwd().resolve().parents[0]\n",
+    "    if not (project_root / \"CSVs\" / \"District Revenue\").exists():\n",
+    "        project_root = Path.cwd().resolve().parents[1]\n",
+    "\n",
+    "CSV_PATH = project_root / \"CSVs\" / \"District Revenue\" / \"District_Revenue_filtered_FY20-FY24_final.csv\"\n",
+    "\n",
+    "print(f\"Notebook directory: {Path.cwd()}\")\n",
+    "print(f\"Project root detected: {project_root}\")\n",
+    "print(f\"CSV path: {CSV_PATH}\")\n",
+    "print(f\"✅ CSV exists: {CSV_PATH.exists()}\")\n",
+    "\n",
+    "if not CSV_PATH.exists():\n",
+    "    raise FileNotFoundError(f\"CSV not found at {CSV_PATH}. Please ensure District_Revenue_filtered_FY20-FY24_final.csv exists.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "==== Compute Total Revenue and Top 10 ====\n",
       "   Year Service  Region                       Base  Total_Revenue\n",
@@ -125,41 +168,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_6880\\2284841767.py:93: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_18604\\2652143096.py:64: FutureWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  .apply(lambda x: x.nlargest(TOP_N, 'Total_Revenue'))\n"
      ]
     }
    ],
    "source": [
-    "# ------------------- Project root and file paths -------------------\n",
-    "# Get the notebook's directory\n",
-    "notebook_file = Path(__file__) if '__file__' in dir() else Path.cwd() / \"Base_Question_2.ipynb\"\n",
-    "notebook_dir = Path.cwd() if 'Base Question' in str(Path.cwd()) else Path(__file__).parent\n",
-    "\n",
-    "# Walk up to find fa25-team-b (contains CSVs folder)\n",
-    "current = Path.cwd().resolve()\n",
-    "project_root = None\n",
-    "for p in [current] + list(current.parents):\n",
-    "    if (p / \"CSVs\" / \"District Revenue\").exists():\n",
-    "        project_root = p\n",
-    "        break\n",
-    "\n",
-    "if project_root is None:\n",
-    "    # Fallback: assume we're in Base Question and go up one level\n",
-    "    project_root = Path.cwd().resolve().parents[0]\n",
-    "    if not (project_root / \"CSVs\" / \"District Revenue\").exists():\n",
-    "        project_root = Path.cwd().resolve().parents[1]\n",
-    "\n",
-    "CSV_PATH = project_root / \"CSVs\" / \"District Revenue\" / \"District_Revenue_filtered_FY20-FY24_final.csv\"\n",
-    "\n",
-    "print(f\"Notebook directory: {Path.cwd()}\")\n",
-    "print(f\"Project root detected: {project_root}\")\n",
-    "print(f\"CSV path: {CSV_PATH}\")\n",
-    "print(f\"✅ CSV exists: {CSV_PATH.exists()}\")\n",
-    "\n",
-    "if not CSV_PATH.exists():\n",
-    "    raise FileNotFoundError(f\"CSV not found at {CSV_PATH}. Please ensure District_Revenue_filtered_FY20-FY24_final.csv exists.\")\n",
-    "\n",
     "# ------------------- Parameters -------------------\n",
     "TOP_N = 10   # number of top bases to include\n",
     "YEAR_MIN, YEAR_MAX = 2020, 2024  # fiscal year range\n",
@@ -260,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -338,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -425,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
